--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=3100
+PORT=8181
+HIKING_API_KEY=200853613-cea104583effce485149411389c69ca1
+LOCATIONAPIKEY=5a5e5bcd6b7693
+WEATHER_API_KEY=3d1e52da36be4a8198cb423b39627e71
