--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "city_explorer_api",
+  "name": "lab-06",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AhmadHirthani/city_explorer_api.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AhmadHirthani/city_explorer_api/issues"
-  },
-  "homepage": "https://github.com/AhmadHirthani/city_explorer_api#readme",
   "dependencies": {
-    "cors": "^2.8.5",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "superagent": "^5.3.1"
   }
 }
